--- a/css/rafi.css
+++ b/css/rafi.css
@@ -1,19 +1,23 @@
 nav > ul > li {
     display:inline;
     margin-right: 10px;
+}
+nav li > a{
+    
     text-decoration: none;
+    font-size: 23px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif  ;
 }
-nav {
+footer{
+    text-align: center;
     background-color: black;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px 20 px;
-    box-shadow:0 2px 5px rgba(0, 0, 0, 0.2) ;
-   text-decoration-color: white;
-   text-decoration: none;
-}
-footer {
+    background-size: 300px;
 
+}
+footer > p > smalla{
+    text-decoration: white;
+}
+main > header > h2{
+    text-align: center;
+    te
 }
