--- a/css/style.css
+++ b/css/style.css
@@ -109,3 +109,20 @@ a {
     font-size: 20px;
     font-family: sans-serif;
 }
+.footer{
+    display:flex;
+    gap: 10px;
+    height: 450px;
+    background-color: black;
+    color: white;
+    align-items:flex-start ;
+    
+}
+.middle{
+    height: 800px;
+    background-color: white;
+}
+.ft{
+    display: flex;
+    justify-content: space-around;
+}
