--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,24 @@ a {
     display: flex;
     justify-content: space-around;
 }
+.home2{
+    display: flex;
+    height: 32px;
+    width: 32px;
+    background-color: white;
+     border-radius: 30px;
+}
+.firstl{
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+    margin-left: 20px;
+}
+.mid1{
+    display: flex;
+    flex-direction: column;
+}
+.im1{
+    height: 500px;
+    width: 50px;
+}
